# CinMath

./: .gitignore  .gitmodules  BuildLinux.sh  BuildWindows.bat  CMakeLists.txt  DeleteSolutionFiles.bat  README.md  WindowsGenerateProject.bat  premake5.lua
Benchmark/: main.cpp
BenchmarkResults/: AVX.json  DefaultInstructionSet.json  GeneratePlotData.py  SSE.json
CinMath/include/CinMath/: Angle.h  Angle.inl  CinMath.h  Matrix2.h  Matrix2.inl  Matrix3.h  Matrix3.inl  Matrix4.h  Matrix4.inl  Quaternion.h  Quaternion.inl  Transform.inl  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
Examples/: ExampleAngles.hpp  ExampleMatrix.hpp  ExampleQuaternion.hpp  ExampleSIMD.hpp  ExampleSwizzling.hpp  ExampleVector.hpp  main.cpp
Examples/src/: Example.cpp  src.cpp
TestSuite/: main.cpp
UnitTests/src/: Benchmark.cpp  Benchmark.h  Main.cpp  UnitTests.cpp  UnitTests.h
